import groovy.json.JsonSlurper

plugins {
    java
    id("org.beryx.jlink") version "4.0.0"
    id("com.github.ben-manes.versions") version "0.54.0"
}

val MAIN_CLASS  = "core.Main"
val MAIN_MODULE = "core.main"

sourceSets {
    create("tools") {
        java {
            srcDir("src/tools")
        }
    }
    main {
        java {
            srcDir("src/main")
        }
        resources {
            srcDir("src/assets")
        }
    }
}

tasks.withType<JavaExec> {
    if (name.startsWith(MAIN_CLASS)) {
        // core.Main.main()
        jvmArguments.add("--enable-native-access=org.lwjgl")
        jvmArguments.add("--enable-native-access=org.lwjgl.opengl")
        jvmArguments.add("-XX:-OmitStackTraceInFastThrow")
    }

    doFirst {
        if (System.getProperty("os.name")?.contains("Linux") == true) {
            val gpuInfo = providers.exec {
                commandLine("sh", "-c", "glxinfo | grep 'OpenGL vendor' || echo 'unknown'")
            }.standardOutput.asText.get()

            if (System.getenv("XDG_SESSION_TYPE") == "wayland" && gpuInfo.contains("NVIDIA")) {
                environment("__GL_THREADED_OPTIMIZATIONS", "0")
            }
        }
    }
}

tasks.named<JavaCompile>("compileToolsJava") {
    dependsOn(tasks.compileJava)
    classpath = sourceSets["main"].runtimeClasspath + sourceSets["main"].output
}

val genatlas = tasks.register<JavaExec>("genatlas") {
    mustRunAfter(tasks.classes)
    classpath = sourceSets["tools"].runtimeClasspath +
            sourceSets["main"].runtimeClasspath +
            sourceSets["main"].output

    workingDir = rootDir
    mainClass = "core.tool.AtlasGenerator"
}

tasks.classes {
    finalizedBy(genatlas)
}

val lwjglVersion = "3.4.1"
val lwjglNatives = Pair(
    System.getProperty("os.name")!!,
    System.getProperty("os.arch")!!
).let { (name, arch) ->
    when {
        arrayOf("Linux", "FreeBSD", "SunOS", "Unit").any { name.startsWith(it) } ->
            if (arrayOf("arm", "aarch64").any { arch.startsWith(it) })
                "natives-linux${if (arch.contains("64") || arch.startsWith("armv8")) "-arm64" else "-arm32"}"
            else
                "natives-linux"
        arrayOf("Windows").any { name.startsWith(it) }                           ->
            if (arch.contains("64"))
                "natives-windows${if (arch.startsWith("aarch64")) "-arm64" else ""}"
            else
                "natives-windows-x86"
        arrayOf("Mac OS X", "Darwin").any { name.startsWith(it) }                ->
            if (arch.startsWith("aarch64") || arch.startsWith("armv8"))
                "natives-macos-arm64"
            else
                "natives-macos"
        else -> throw Error("Unrecognized or unsupported platform. Please set \"lwjglNatives\" manually")
    }
}

repositories {
    mavenCentral()
}

tasks.compileJava {
    options.compilerArgs.add("-parameters")
    options.encoding = "UTF-8"
    options.release = 21
}

java {
    toolchain {
        val minVersion = 21 // минимальные требования
        val preferred = 26  // проверено

        val current = JavaLanguageVersion.current().asInt()

        // Суть в том, чтобы версия java была >=21
        val target = when {
            current >= preferred -> current
            current >= minVersion -> current
            else -> preferred
        }

        languageVersion = JavaLanguageVersion.of(target)
    }
}

dependencies {
    implementation("it.unimi.dsi:fastutil:8.5.18")
    implementation("org.apache.logging.log4j:log4j-api:3.0.0-beta2")
    implementation("org.apache.logging.log4j:log4j-core:3.0.0-beta2")
    implementation("org.apache.logging.log4j:log4j-iostreams:3.0.0-beta2")

    implementation("com.fasterxml.jackson.core:jackson-databind:2.21.3")
    implementation("org.jetbrains:annotations:26.1.0")

    implementation(platform("org.lwjgl:lwjgl-bom:$lwjglVersion"))
    implementation("org.lwjgl", "lwjgl")
    implementation("org.lwjgl", "lwjgl-glfw")
    implementation("org.lwjgl", "lwjgl-opengl")
    implementation("org.lwjgl", "lwjgl-jemalloc")

    implementation("org.lwjgl", "lwjgl", classifier = lwjglNatives)
    implementation("org.lwjgl", "lwjgl-glfw", classifier = lwjglNatives)
    implementation("org.lwjgl", "lwjgl-opengl", classifier = lwjglNatives)
    implementation("org.lwjgl", "lwjgl-jemalloc", classifier = lwjglNatives)

    testImplementation("org.junit.jupiter:junit-jupiter:5.7.1")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

application {
    mainClass  = MAIN_CLASS
    mainModule = MAIN_MODULE
}

jlink {
    mainClass = MAIN_CLASS

    mergedModule {
        requires("java.desktop")
    }
    enableCds()
    options.addAll(listOf(
        "--no-header-files",
        "--no-man-pages",
    ))
    if (System.getProperty("os.name")!!.startsWith("Linux")) {
        options.add("--strip-native-debug-symbols")
        options.add("exclude-debuginfo-files");
    }

    launcher {
        name = "celsius"
        args = listOf("--packaged")

        jvmArgs = arrayListOf()
        if (System.getProperty("os.name")!!.startsWith("Darwin") || System.getProperty("os.name")!!.startsWith("Mac OS X")) {
            jvmArgs.add("-XstartOnFirstThread")
        }
        if (JavaLanguageVersion.current().canCompileOrRun(22)) {
            jvmArgs.add("--enable-native-access=org.lwjgl.opengl")
            jvmArgs.add("--enable-native-access=org.lwjgl")
        }
    }
}

tasks.jar {
    exclude("sprites.atlas.hash")
    includeEmptyDirs = false
    duplicatesStrategy = DuplicatesStrategy.FAIL
    isReproducibleFileOrder = true

    doFirst {
        @Suppress("UNCHECKED_CAST")
        val json = JsonSlurper().parse(layout.projectDirectory.file("src/assets/sprites.atlas.hash").asFile) as Map<String, String>
        excludes.addAll(json.keys)
    }
}

tasks.jpackageImage {
    dependsOn(tasks.createDelegatingModules)
}

tasks.test {
    useJUnitPlatform()

    testLogging {
        events("passed")
    }
}
